# entendendo-algoritmos

./: README.md  pyproject.toml
entendendo_algoritmos/: algorithm_dijkstra.py  conta.py  estados_estacoes.py  grafo.py  max_valor.py  ordenacao_por_selecao.py  pesquisa_binaria.py  procure_pela_chave_for.py  procure_pela_chave_while.py  quicksort.py  soma.py  vota.py
